# promprint-data-wrangling

./: .gitignore  CITATION.cff  README.md  config.py  main.py  pyproject.toml
lib/: helpers.py  nls.py
src/: main.py
src/cli/: clean_nls.py  clean_register.py
src/helpers/: cleaning.py
src/lib/: helpers.py  nls.py
tests/: test_clean_nls.py  test_clean_register.py  test_helpers.py  test_nls.py
tests/test_files/: bad_column_labels.csv  bad_test_config.py  nls_duplicate_indices.tsv  nls_sample_filtered_1863b.tsv  one_register_test_config.py  test_config.py  test_register.csv  wrong_keys_config.py
tests/test_files/test_nls/: test_nls_02.txt
tests/test_files/test_nls_no_number/: test_nls_sample.txt
