[project]
name = "promprint-data-wrangling"
version = "1.1.0"
description = "General scripts for managing promprint data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.12.0",
    "mypy>=1.18.2",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pytest>=9.0.1",
    "virtualenvwrapper>=6.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
